--- a/portfolio.html
+++ b/portfolio.html
@@ -181,7 +181,7 @@
                     <div class="overlay">
                         <img src="./images/project9.jpg" alt="Картинка ноутбука с примером дизайна приложения" width="370" height="400">
                         <p class="overlay-description">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
-                        исчерпывающие сведения о компании или частном лице.</p>
+                        исчерпывающие сведения о&nbsp;компании или частном лице.</p>
                     </div>
                     <div class="project-description">
                         <h2 class="title">Growing Business</h2>
